/*
** EPITECH PROJECT, 2021
** Arcade-Toulouse
** File description:
** Vector3
*/

#ifndef VECTOR3_HPP_
#define VECTOR3_HPP_

struct Vector3 {
    float x;
    float y;
    float z;
};

#endif /* !VECTOR3_HPP_ */
