/*
** EPITECH PROJECT, 2021
** Arcade-Toulouse
** File description:
** IEvent
*/

#ifndef IEVENT_HPP_
#define IEVENT_HPP_

namespace arcade {

namespace event {

    class IEvent {
    public:
        IEvent() = default;
        ~IEvent() = default;

    protected:
    private:
    };

}

}

#endif /* !IEVENT_HPP_ */
